Added solution to ex 3 and added QUIT option and simple info

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Socket-1_ex1TimeServer/build/
 /Socket-1_ex2TimeClient/nbproject/private/
 /Socket-1_ex2TimeClient/build/
+/Socket-1_ex3ExtendedEchoServer/nbproject/private/
+/Socket-1_ex3ExtendedEchoServer/build/
