Added solution to ex 4 GUI client with Observer pattern

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /Socket-1_ex2TimeClient/build/
 /Socket-1_ex3ExtendedEchoServer/nbproject/private/
 /Socket-1_ex3ExtendedEchoServer/build/
+/Socket-1_ex4ExtendedEchoServerThreads/nbproject/private/
+/Socket-1_ex4ExtendedEchoServerThreads/build/
+/Socket-1_ex4ExtendedEchoServerThreadsGUI/nbproject/private/
+/Socket-1_ex4ExtendedEchoClientGUI/nbproject/private/
+/Socket-1_ex4ExtendedEchoClientGUI/build/
